# csad2526ki405vladkliuchar14

./: CMakeLists.txt  analysis.txt  ci.bat  ci.sh  copilotlog2.txt  copilotlog3.txt  copilotlog4.txt  copilotlog5.txt
.github/workflows/: ci.yml
lab1/: README.md  copilotlog.txt  copilotlog3.txt
lab2/: i2c_master.v  i2c_master_rx.v  i2c_master_rx.v.bak  i2c_master_tb.v  i2c_master_tb.v.bak  i2c_master_tx.v  i2c_master_tx.v.bak  i2c_tx_rx.v  i2c_tx_rx.v.bak  vsim.wlf
lab2/work/: _info  _lib.qdb  _lib1_3.qdb  _lib1_3.qpg  _lib1_3.qtl  _lib1_4.qdb  _lib1_4.qpg  _lib1_4.qtl
tests/: unit_tests.cpp
